--- a/templates/_admin.html.twig
+++ b/templates/_admin.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Administration{% endblock %}
+{% block title %}Administration - Abi-Rechner | Treptow-Kolleg Berlin{% endblock %}
 
 {% block local_nav %}
     <nav class="UnderlineNav UnderlineNav--full position-sticky top-0 color-bg-default" style="z-index: 999">
