--- a/templates/_pupil.html.twig
+++ b/templates/_pupil.html.twig
@@ -1,5 +1,7 @@
 {% extends '_admin.html.twig' %}
 
+{% block title %}Prüflinge - Abi-Rechner | Treptow-Kolleg Berlin{% endblock %}
+
 {% block sidebar %}
     <div class="p-3">
         <h4>Schnellzugriff</h4>
