--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -7,15 +7,22 @@
                 <div class="PageLayout-header mb-5">
                     <div class=" d-flex flex-justify-between flex-items-baseline flex-wrap mb-5">
                         <div>
-                            <h1>Startseite</h1>
-                            <h3>Übersicht zu den Aktionen oder Login</h3>
+                            <h1>AbiRechner PHP</h1>
+                            <h3 class="color-fg-accent">Zusatzprüfungen berechnen</h3>
                         </div>
+                        <a href="{{ path('app_login') }}" class="btn btn-outline">
+                            <div class=" d-flex flex-items-center">
+                                Anmelden
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-7 float-left">
                 <div class="PageLayout-content">
-                    <p>Diese Seite ist öffentlich und kann zur Berechnung von Zusatzprüfungen <b>ohne</b> Eingabe personenbezogener Daten genutzt werden.</p>
+                    <p>
+                        Bitte am System anmelden, um fortzufahren.
+                    </p>
                 </div>
             </div>
             <div class="col-12 col-lg-5 float-left">
