--- a/templates/data/import.html.twig
+++ b/templates/data/import.html.twig
@@ -1,5 +1,7 @@
 {% extends '_exam.html.twig' %}
 
+{% block title %}Importieren - Abi-Rechner | Treptow-Kolleg Berlin{% endblock %}
+
 {% block actions %}
 {% endblock %}
 
