--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
         <meta name="msapplication-TileColor" content="#2b5797">
         <meta name="theme-color" content="#ffffff">
 
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Abi-Rechner | Treptow-Kolleg Berlin{% endblock %}</title>
 
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -85,7 +85,14 @@
             {% block footer %}
                 <div class="AppFrame-footer color-bg-inset border-top">
                     <div class="p-3">
-                        &copy;2023 - Benjamin Wagner
+                        {% set year_now = 'now'|date('Y') %}
+                        {% if year_now == 2023 %}
+                            &copy;2023 - Benjamin Wagner | im Auftrag des Treptow-Kollegs Berlin
+                        {% else %}
+                            &copy;2023-{{ year_now}} - Benjamin Wagner | im Auftrag des Treptow-Kollegs Berlin
+                        {% endif %}
+                        <a href="https://treptow-kolleg.de/impressum" class="ml-2" target="_blank">Impressum</a>
+                        <a href="https://treptow-kolleg.de/datenschutz" class="ml-2" target="_blank">Datenschutz</a>
                     </div>
                 </div>
             {% endblock %}
