--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -7,7 +7,7 @@
                 <div class="PageLayout-header mb-5">
                     <div class=" d-flex flex-justify-between flex-items-baseline flex-wrap mb-5">
                         <div>
-                            <h1>AbiRechner PHP</h1>
+                            <h1>AbiRechner</h1>
                             <h3 class="color-fg-accent">Zusatzprüfungen berechnen</h3>
                         </div>
                         <a href="{{ path('app_login') }}" class="btn btn-outline">
