--- a/templates/pdf_base.html.twig
+++ b/templates/pdf_base.html.twig
@@ -10,26 +10,27 @@
 
         <style>
             @page { margin: 10px; }
-            html, body { margin: 10px;
-                font-family: 'arial', sans-serif;
-                font-size: 9pt;
-            }
+            h5{font-size: 12px}
+            h4{font-size: 13px}
+            h3{font-size: 14px}
+            p,table,span {font-size: 12px}
+            table {margin-bottom: 0;}
         </style>
     </head>
     <body>
         <div class="container">
             <div class="row g-3">
                 <div class="col-12">
-                    <table class="table table-borderless">
+                    <table class="table table-borderless" style="margin-bottom: 0;">
                         <tbody>
                         <tr>
                             <th class="">
                                 <h5 class="mb-5">Treptow-Kolleg Berlin - Institut zur Erlangung der Hochschulreife<br>Kiefholzstraße 274, 12437 Berlin</h5>
-                                <h4 class="mb-0">Prüfungsergebnisse und Empfehlungen</h4>
+                                <h4 class="mb-0" style="margin-bottom: 0">Prüfungsergebnisse und Empfehlungen</h4>
                                 <h3><b>{{ pupil }}</b></h3>
                             </th>
                             <td class="text-right">
-                                <!--<img src="{{  absolute_url(asset('build/images/tk.svg') ) }}" alt="Treptow-Kolleg Logo" height="103" width="103"> /-->
+                                <img src="https://abirechner.treptow-kolleg.de/build/images/tk.svg" alt="Treptow-Kolleg Logo" height="103" width="103">
                             </td>
                         </tr>
                         <tr>
@@ -38,8 +39,8 @@
                             </td>
                         </tr>
                         <tr>
-                            <th class="h5 text-left">Punkte aus der Qualifikationsphase</th>
-                            <td class="h5 text-right">{{ pupil.qualificationPoints }}</td>
+                            <th class="text-left mb-2">Punkte aus der Qualifikationsphase</th>
+                            <td class="text-right mb-2">{{ pupil.qualificationPoints }}</td>
                         </tr>
                         </tbody>
                     </table>
@@ -67,21 +68,21 @@
                     </table>
                 </div>
                 <div class="col-12">
-                    <table class="table table-borderless">
+                    <table class="table table-borderless" style="margin-bottom: 0;">
                         <tbody>
                         <tr>
-                            <th class="h5 text-left">Punkte aus Prüfungsblock</th>
-                            <td class="h5 text-right text-end">{{ examPoints * 4 }}</td>
+                            <th class="text-left  mb-2">Punkte aus Prüfungsblock</th>
+                            <td class="text-right text-end mb-2">{{ examPoints * 4 }}</td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
                 <div class="col-12">
-                    <table class="table table-borderless">
+                    <table class="table table-borderless" style="margin-bottom: 0;">
                         <tbody>
-                        <tr>
-                            <th class="h5 text-left">Gesamtpunktzahl</th>
-                            <td class="h5 text-right text-end">{{ examPoints * 4 + pupil.qualificationPoints }}</td>
+                        <tr style="margin-bottom: 0;">
+                            <th class="text-left  mb-2" >Gesamtpunktzahl</th>
+                            <td class="text-right text-end mb-2">{{ examPoints * 4 + pupil.qualificationPoints }}</td>
                         </tr>
                         </tbody>
                     </table>
@@ -98,10 +99,10 @@
                 </div>
                 {% if extended_exams|length > 0 %}
                     <div class="col-12">
-                        <table class="table table-borderless">
+                        <table class="table table-borderless" style="margin-bottom: 0;">
                             <tbody>
                             <tr>
-                                <th class="h5 text-left">Mögliche mündliche Zusatzprüfungen</th>
+                                <th class="text-left mb-2">Mögliche mündliche Zusatzprüfungen</th>
                             </tr>
                             </tbody>
                         </table>
@@ -131,17 +132,17 @@
                         </table>
                     </div>
                     <div class="col-12">
-                        <table class="table table-borderless">
+                        <table class="table table-borderless" style="margin-bottom: 0;">
                             <tbody>
                             <tr>
-                                <th class="h5 text-left">Gesamt nach Zusatzprüfung</th>
-                                <td class="h5 text-right text-end">{{ diff }}</td>
+                                <th class="text-left mb-2">Gesamt nach Zusatzprüfung</th>
+                                <td class="text-right text-end mb-2">{{ diff }}</td>
                             </tr>
                             </tbody>
                         </table>
                     </div>
                     <div class="col-12">
-                        <table class="table table-borderless">
+                        <table class="table table-borderless" style="margin-bottom: 0;">
                             <tbody>
                             <tr>
                                 <th class="h5 text-left"><b>Neue Endnote</b></th>
